--- a/src/app/[locale]/global.css
+++ b/src/app/[locale]/global.css
@@ -26,4 +26,11 @@ a {
   text-decoration: none;
   display: block;
 }
+
+.slick-dots {
+  top: 10rem;
+  transform: scale(2);
+  filter: invert(1);
+  height: fit-content;
+}
 /* End Normalize */
