--- a/src/app/[locale]/global.css
+++ b/src/app/[locale]/global.css
@@ -32,8 +32,17 @@ a {
 .slick-dots {
   top: 10rem;
   transform: scale(2);
-  filter: invert(1);
+  /* filter: invert(1); */
   height: fit-content;
+  & > li > button::before {
+    opacity: 0.5 !important;
+    color: #00a76f !important;
+    text-shadow: 0px 0px 2px white;
+  }
+  & > .slick-active > button::before {
+    opacity: 1 !important;
+    color: #007867 !important;
+  }
 }
 
 .for-custom-scroll {
